--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <button id="btn-ro">RO</button>
 <button id="btn-all">All</button>
 
+<span class="pull-right">Source is <a href="https://github.com/mihneadb/stargazers_table">here</a>.</span>
+
 <table class="tablesorter">
     <thead>
         <tr>
