--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<h3>Stargazers for <a href="https://github.com/uberVU/grid">uberVU/grid</a></h3>
+
 <button id="btn-ro">RO</button>
 <button id="btn-all">All</button>
 
