--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <tbody></tbody>
 </table>
 
+<img id="spinner" src="http://fbi.gov/spinner.gif" alt="spinner"/>
+
 <script type="text/x-handlebars-template" id="stargazer-row-template">
     <tr>
         <td><img class="avatar" src="{{ avatar_url }}" alt="avatar"/></td>
